# alx-project-nexus

./: .coderabbit.yaml  .gitignore  DEPLOYMENT.md  README.md  _build.sh  render.yaml  render_build.sh  requirements.txt
.github/workflows/: ci.yml
Movie-Recommendation-BE/: .env.example  DATABASE.md  build.sh  cache.py  celerybeat-schedule  conftest.py  docker-compose.yml  dockerfile  nexus_erd.mermaid  pyproject.toml  render.yaml  requirements.txt  start.sh  tasks.py  test_redis_cache.py  update_secret.py  verify_services.py
Movie-Recommendation-BE/.github/workflows/: ci.yml  deploy.yml
Movie-Recommendation-BE/apps/movies_api/: admin.py  apps.py  cache.py  filters.py  models.py  serializers.py  signals.py  tasks.py  test_cache_utils.py  test_caching.py  test_recommendation_service.py  test_recommendation_service_comprehensive.py  test_recommendation_service_extra.py  test_services_status.py  test_tasks.py  test_tasks_comprehensive.py  test_tasks_targeted.py  test_tmdb_service.py  test_views_comprehensive.py  test_views_endpoints.py  test_views_targeted.py  tests.py  urls.py  views.py
Movie-Recommendation-BE/apps/movies_api/management/commands/: fetch_movies.py  populate_movies.py  search_tmdb.py  sync_tmdb_movies.py  test_tmdb_config.py
Movie-Recommendation-BE/apps/movies_api/migrations/: 0001_initial.py
Movie-Recommendation-BE/apps/movies_api/services/: recommendation_service.py  tmdb_service.py
Movie-Recommendation-BE/config/: celery.py  settings.py  settings_test.py  urls.py
Movie-Recommendation-BE/templates/drf-yasg/: swagger-ui.html
